--- a/rar.css
+++ b/rar.css
@@ -60,6 +60,13 @@ a {
   text-decoration: none;
   color: rgb(115, 28, 28);
 }
+.gallerypage {
+  display:flex;
+}
+.gallery img {
+  height: 100%;
+  width: 100%;
+  border: rgb(115, 28, 28) solid 5px;
+}
 .utterances {
-
 }
