--- a/rar.css
+++ b/rar.css
@@ -64,6 +64,11 @@ a {
   display:flex;
 }
 .gallery img {
+  max-width: 100%;
+  max-height: 100%;
+  display: block;
+  height: auto;
+  width: auto;
   border: rgb(115, 28, 28) solid 5px;
 }
 .utterances {
