--- a/rar.css
+++ b/rar.css
@@ -66,6 +66,8 @@ a {
 .gallery img {
   max-width: 100%;
   max-height: 100%;
+  min-width: 15%;
+  min-height: 15%;
   display: block;
   height: auto;
   width: auto;
