--- a/rar.css
+++ b/rar.css
@@ -62,10 +62,10 @@ a {
 }
 .gallerypage {
   display:flex;
-  flexwrap:wrap;
+  flex-wrap:wrap;
 }
 .gallery img {
-  max-width: 100%;
+  max-width: 50%;
   max-height: 100%;
   min-width: 15%;
   min-height: 15%;
