--- a/rar.css
+++ b/rar.css
@@ -63,12 +63,12 @@ a {
 .gallerypage {
   display:flex;
   flex-wrap:wrap;
+.gallery {
+  max-width:50%
+  max-height:100%
 }
 .gallery img {
-  max-width: 100%;
-  max-height: 100%;
-  min-width: 15%;
-  min-height: 15%;
+  display:block;
   height: auto;
   width: auto;
   border: rgb(115, 28, 28) solid 5px;
