--- a/rar.css
+++ b/rar.css
@@ -61,18 +61,21 @@ a {
   color: rgb(115, 28, 28);
 }
 .gallerypage {
-  display:flex;
-  flex-wrap:wrap;
+  display: flex;
+  flex-wrap: wrap;
 }
-  
-figure .gallery {
-  max-width:50%;
-  max-height:100%;
+
+figure {
+  max-width: 43%;
+  max-height: 100%;
 }
+
 .gallery img {
-  height: 100%;
-  width: 100%;
+  max-width: 100%;
+  width: auto;
+  height: auto;
   border: rgb(115, 28, 28) solid 5px;
 }
 .utterances {
 }
+
