--- a/rar.css
+++ b/rar.css
@@ -44,8 +44,9 @@ figure.container {
   margin: 0 0 0 0;
 }
 .container img {
-  height: 100%;
-  width: 100%;
+  max-width: 100%;
+  width: auto;
+  height: auto;
 }
 
 .photos {
